5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1723_2508.log
== TEST (2019-05-11 17:51:57) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2

while(n>i):
	s= s + (4/(i)*(i+1)*(i+2))*(-1)**i
	i= i+2
	
print(round(x,8))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x,8))	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:52:26) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2

while(n>i):
	s= s + (4/(i)*(i+1)*(i+2))*(-1)**i
	i= i+2
	
print(round(s,8))	
-- OUTPUT:
57.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:54:05) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2

while(n>i):
	s= s + (4/(i)*(i+1)*(i+2))*(-1)**i
	i= i+2
	
print(round(s,8))	
-- OUTPUT:
57.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:54:52) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2

while(n>i):
	s= s + (4/((i)*(i+1)*(i+2)))*(-1)**i
	i= i+2
	
print(round(s,8))	
-- OUTPUT:
3.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:56:47) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2

while(n>0):
	s= s + (4/((i)*(i+1)*(i+2)))*(-1)**i
	i= i+2
	n = n-1
print(round(s,8))	
-- OUTPUT:
3.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:57:10) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2

while(n>0):
	s= s + (4/((i)*(i+1)*(i+2)))*(-1)**i
	i= i+2
	n = n-1
print(round(s,8))	
-- OUTPUT:
3.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:59:21) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2
j=0
while(n>0):
	s= s + (4/((i)*(i+1)*(i+2)))*(-1)**
	i= i+2
	j= j+1
	n = n-1
print(round(s,8))	
-- ERROR:
File "XXXX", line 7
    s= s + (4/((i)*(i+1)*(i+2)))*(-1)**
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:59:28) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2
j=0
while(n>0):
	s= s + (4/((i)*(i+1)*(i+2)))*(-1)**j
	i= i+2
	j= j+1
	n = n-1
print(round(s,8))	
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 17:59:51) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2
j=0
while(n>0):
	s= s + (4/((i)*(i+1)*(i+2)))*(-1)**j
	i= i+2
	j= j+1
	n = n-1
print(round(s,8))	
-- EXECUTION TIME:
0.177209
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14157215
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:02:27) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2

while(n>0):
	s= s + (4/((i)*(i+1)*(i+2)))*(-1)**n
	i= i+2
	#j= j+1
	n = n-1
print(round(s,8))	
-- OUTPUT:
2.85728716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 18:06:24) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2
j=1
while(n>0):
	s= s + (4/(i*(i+1)*(i+2)))*(-1)**j
	i= i+2
	j= j+1
	n = n-1
print(round(s,8))	
-- EXECUTION TIME:
0.174028
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.85728716
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
2.85842785
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.85837619
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 18:07:32) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2
j=2
while(n>0):
	s= s + (4/(i*(i+1)*(i+2)))*(-1)**j
	i= i+2
	j= j+1
	n = n-1
print(round(s,8))	
-- EXECUTION TIME:
0.162849
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14157215
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:11:11) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2
j=0
while(n>j):
	s= s + (4/(i*(i+1)*(i+2)))*(-1)**j
	i= i+2
	j= j+1
	
print(round(s,8))	
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:12:19) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2
j=0
while(n>j):
	s= s + (4/(i*(i+1)*(i+2)))*(-1)**j
	i= i+2
	j= j+1
	
print(round(s,8))	
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:12:29) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2
j=0
while(n>j):
	s= s + (4/(i*(i+1)*(i+2)))*(-1)**j
	i= i+2
	j= j+1
	
print(round(s,8))	
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:16:11) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2
j=0
while(n>1):
	s= s + (4/(i*(i+1)*(i+2)))*(-1)**j
	i= i+2
	j= j+1
	n= n-1
print(round(s,8))	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:16:18) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2
j=0
while(n>1):
	s= s + (4/(i*(i+1)*(i+2)))*(-1)**j
	i= i+2
	j= j+1
	n= n-1
print(round(s,8))	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:16:27) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2
j=0
while(n>1):
	s= s + (4/(i*(i+1)*(i+2)))*(-1)**j
	i= i+2
	j= j+1
	n= n-1
print(round(s,8))	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 18:16:35) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2
j=0
while(n>1):
	s= s + (4/(i*(i+1)*(i+2)))*(-1)**j
	i= i+2
	j= j+1
	n= n-1
print(round(s,8))	
-- EXECUTION TIME:
0.165934
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:55:52) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2
j=0
while(n>1):
	s= s + (4/(i*(i+1)*(i+2)))*(-1)**j
	i= i+2
	j= j+1
	n= n-1
print(round(s,8))	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:58:22) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2
j=0
while(n>i):
	s= s + (4/(i*(i+1)*(i+2)))*(-1)**j
	i= i+2
	j= j+1
	n= n-1
print(round(s,8))	
-- OUTPUT:
3.16666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:58:38) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2
j=0
while(n>0):
	s= s + (4/(i*(i+1)*(i+2)))*(-1)**j
	i= i+2
	j= j+1
	n= n-1
print(round(s,8))	
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:58:50) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2
j=0
while(n>1):
	s= s + (4/(i*(i+1)*(i+2)))*(-1)**j
	i= i+2
	j= j+1
	n= n-1
print(round(s,8))	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:02:48) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2
j=0
while(n>i):
	s= s + (4/(i*(i+1)*(i+2)))*(-1)**j
	i= i+2
	j= j+1
	n= n
print(round(s,8))	
-- OUTPUT:
3.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:31:42) 
-- CODE:
from math import*
n =int(input("numero natural: "))
s = 3
i = 2
j=0
while(n>1):
	s= s + (4/(i*(i+1)*(i+2)))*(-1)**j
	i= i+2
	j= j+1
	n= n-1
print(round(s,8))	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
